--- a/src/App.less
+++ b/src/App.less
@@ -4,13 +4,17 @@
   padding: 0;
   text-rendering: optimizeLegibility;
 }
+
 html {
   font-size: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'avenir next', avenir, 'helvetica neue', helvetica, ubuntu, roboto, noto, 'segoe ui', arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'avenir next', avenir,
+    'helvetica neue', helvetica, ubuntu, roboto, noto, 'segoe ui', arial,
+    sans-serif;
   margin: 0;
   padding: 0;
   text-decoration-skip-ink: 'auto';
 }
+
 :root {
   --gray-900: #1a202c;
   --gray-800: #2d3748;
@@ -45,6 +49,7 @@ html {
   --text-color: var(--gray-800);
   --focus-ring-color: var(--blue-500);
 }
+
 body {
   padding: 0;
   margin: 0 auto;
@@ -55,6 +60,7 @@ body {
   color: var(--text-color);
   caret-color: var(--text-color);
 }
+
 h1,
 h2,
 h3,
@@ -65,50 +71,61 @@ h6 {
   margin-top: 1em;
   font-weight: bold;
 }
+
 h1 {
   font-size: 3.052rem;
   letter-spacing: -0.15rem;
   line-height: 1;
 }
+
 h2 {
   font-size: 2.441rem;
   letter-spacing: -0.12rem;
   line-height: 1.2;
 }
+
 h3 {
   font-size: 1.953rem;
   letter-spacing: -0.09rem;
   line-height: 1.2;
 }
+
 h4 {
   font-size: 1.563rem;
   letter-spacing: -0.06rem;
   line-height: 1.3;
 }
+
 h5 {
   font-size: 1.25rem;
   letter-spacing: -0.03rem;
   line-height: 1.4;
 }
+
 h6 {
   font-size: 1rem;
   letter-spacing: 0;
   line-height: 1.5;
 }
+
 p {
   margin-bottom: 1.563rem;
 }
+
 ul {
   list-style-type: none;
   width: 100%;
 }
+
 small {
   font-size: 0.888rem;
 }
+
 label {
   font-weight: bold;
   display: flex;
 }
+
 textarea {
   width: 100%;
   font-size: 1rem;
@@ -119,11 +136,15 @@ textarea {
   background-color: var(--gray-100);
   box-sizing: border-box;
   padding: 0.65rem 0.5rem;
-  font-family: -apple-system, BlinkMacSystemFont, 'avenir next', avenir, 'helvetica neue', helvetica, ubuntu, roboto, noto, 'segoe ui', arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'avenir next', avenir,
+    'helvetica neue', helvetica, ubuntu, roboto, noto, 'segoe ui', arial,
+    sans-serif;
 }
+
 input[type='checkbox'] {
   padding: 1rem;
 }
+
 input[type='email'],
 input[type='text'],
 input[type='number'],
@@ -136,19 +157,24 @@ input[type='date'] {
   border-radius: 10px;
   width: 100%;
 }
+
 input[type='date'] {
   width: auto;
 }
+
 button:disabled {
   opacity: 0.5;
   cursor: not-allowed !important;
 }
+
 .container {
   max-width: 1280px;
 }
+
 .todo-list {
   margin: 1rem 0;
 }
+
 .button {
   cursor: pointer;
   padding: 0.5rem 1.25rem;
@@ -162,15 +188,17 @@ button:disabled {
   margin-bottom: 1rem;
   display: inline-block;
   line-height: initial;
-  transition: background-color 200ms ease-in-out, border 200ms ease-in-out, transform 200ms ease-in-out;
+  transition: background-color 200ms ease-in-out, border 200ms ease-in-out,
+    transform 200ms ease-in-out;
   user-select: none;
 }
+
 .done {
   text-decoration: line-through;
 }
+
 .error {
   font-size: 12px;
   color: var(--red-600);
   margin-top: 0.25rem;
 }
-/*# sourceMappingURL=App.css.map */
