--- a/src/App.css
+++ b/src/App.css
@@ -127,7 +127,8 @@ input[type='checkbox'] {
 input[type='email'],
 input[type='text'],
 input[type='number'],
-input[type='date'] {
+input[type='date'],
+input[type='password'] {
   padding: 0.65rem 0.5rem;
   font-size: 1rem;
   border: 2px solid var(--gray-200);
@@ -142,6 +143,9 @@ input[type='date'] {
 button:disabled {
   opacity: 0.5;
   cursor: not-allowed !important;
+}
+.header {
+  margin-top: 3rem;
 }
 .container {
   max-width: 1280px;
@@ -165,12 +169,25 @@ button:disabled {
   transition: background-color 200ms ease-in-out, border 200ms ease-in-out, transform 200ms ease-in-out;
   user-select: none;
 }
+.button_red {
+  background-color: var(--red-800);
+  border-color: var(--red-800);
+}
 .done {
   text-decoration: line-through;
+}
+.text-right {
+  text-align: right;
+}
+.text-center {
+  text-align: center;
 }
 .error {
   font-size: 12px;
   color: var(--red-600);
   margin-top: 0.25rem;
+}
+.form__group {
+  margin-bottom: 1rem;
 }
 /*# sourceMappingURL=App.css.map */
