--- a/src/App.less
+++ b/src/App.less
@@ -148,7 +148,8 @@ input[type='checkbox'] {
 input[type='email'],
 input[type='text'],
 input[type='number'],
-input[type='date'] {
+input[type='date'],
+input[type='password'] {
   padding: 0.65rem 0.5rem;
   font-size: 1rem;
   border: 2px solid var(--gray-200);
@@ -165,6 +166,10 @@ input[type='date'] {
 button:disabled {
   opacity: 0.5;
   cursor: not-allowed !important;
+}
+
+.header {
+  margin-top: 3rem;
 }
 
 .container {
@@ -193,12 +198,29 @@ button:disabled {
   user-select: none;
 }
 
+.button_red {
+  background-color: var(--red-800);
+  border-color: var(--red-800);
+}
+
 .done {
   text-decoration: line-through;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .error {
   font-size: 12px;
   color: var(--red-600);
   margin-top: 0.25rem;
+}
+
+.form__group {
+  margin-bottom: 1rem;
 }
