Убрал redux. Проверка аутентификации через контекст и PrivateRoute.

--- a/src/App.less
+++ b/src/App.less
@@ -172,6 +172,7 @@ button:disabled {
   margin-top: 3rem;
 }
 
+
 .container {
   max-width: 1280px;
 }
@@ -223,4 +224,9 @@ button:disabled {
 
 .form__group {
   margin-bottom: 1rem;
+}
+
+.max-80 {
+  max-width: 80%;
+  margin: 0 auto;
 }
