--- a/src/App.css
+++ b/src/App.css
@@ -190,4 +190,8 @@ button:disabled {
 .form__group {
   margin-bottom: 1rem;
 }
+.max-80 {
+  max-width: 80%;
+  margin: 0 auto;
+}
 /*# sourceMappingURL=App.css.map */
