--- a/src/components/TodoListItem/TodoListItem.css
+++ b/src/components/TodoListItem/TodoListItem.css
@@ -2,6 +2,7 @@
   border-bottom: 2px solid var(--gray-200);
   padding: 0.5rem;
   cursor: pointer;
+  transition: all 0.4s ease-out;
 }
 .item__group {
   display: flex;
