--- a/src/App.css
+++ b/src/App.css
@@ -149,6 +149,7 @@ button:disabled {
 }
 .container {
   max-width: 1280px;
+  padding: 1rem;
 }
 .todo-list {
   margin: 1rem 0;
@@ -163,11 +164,13 @@ button:disabled {
   color: white;
   text-decoration: none;
   font-weight: bold;
-  margin-bottom: 1rem;
   display: inline-block;
   line-height: initial;
   transition: background-color 200ms ease-in-out, border 200ms ease-in-out, transform 200ms ease-in-out;
   user-select: none;
+}
+.button:hover {
+  opacity: 0.8;
 }
 .button_red {
   background-color: var(--red-800);
