--- a/src/components/TodoListItem/TodoListItem.css
+++ b/src/components/TodoListItem/TodoListItem.css
@@ -2,14 +2,23 @@
   border-bottom: 2px solid var(--gray-200);
   padding: 0.5rem;
   cursor: pointer;
-  transition: all 0.4s ease-out;
+  display: flex;
+  user-select: none;
+}
+.item:hover {
+  background-color: #f9f9f9;
 }
 .item__group {
   display: flex;
+  flex-grow: 1;
   justify-content: space-between;
   align-items: center;
+  margin-right: 15px;
 }
 .item__title {
   font-weight: bold;
+}
+.item svg {
+  cursor: grab;
 }
 /*# sourceMappingURL=TodoListItem.css.map */
