--- a/src/components/TodoListItem/TodoListItem.less
+++ b/src/components/TodoListItem/TodoListItem.less
@@ -2,15 +2,25 @@
   border-bottom: 2px solid var(--gray-200);
   padding: 0.5rem;
   cursor: pointer;
-  transition: all 0.4s ease-out;
+  display: flex;
+  user-select: none;
+  &:hover {
+    background-color: #f9f9f9;
+  }
 }
 
 .item__group {
   display: flex;
+  flex-grow: 1;
   justify-content: space-between;
   align-items: center;
+  margin-right: 15px;
 }
 
 .item__title {
   font-weight: bold;
+}
+
+.item svg {
+  cursor: grab;
 }
